<resources>
    <string name="app_name">MySharedPreferences</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">No Handphone</string>
    <string name="age">Age</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="love_manchester_united">Suka manchester united?</string>
    <string name="change">Ubah</string>
    <string name="dummy_name">Muhammad Kurniawan Dwi Hariyadi</string>
    <string name="dummy_email">mohammadhariadi350@gmail.com</string>
    <string name="dummy_number">123456</string>
    <string name="dummy_age">20</string>
    <string name="dummy_islove">IsLoveMU</string>
</resources>